findPostsByPeriod updated